<resources>
    <string name="app_name">Cinemas</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_account">Tài khoản</string>
    <string name="title_notifications">Notifications</string>
    <string name="cinemas">Cinemas</string>
    <string name="add">Thêm</string>
    <string name="movieName">Tên phim</string>
    <string name="time">Thời lượng</string>
    <string name="type">Thể loại</string>
    <string name="description">Mô tả</string>
    <string name="cinemaManagement">Quản lý rạp phim</string>


</resources>